# split

./: .gitmodules  README.md
backend/: Cargo.toml  Dockerfile  README.md  cloudbuild.yaml  sqlx-data.json
backend/sql/: CurrencyPair.sql  Group.sql  Invite.sql  Membership.sql  Message.sql  Settlement.sql  Split.sql  Transaction.sql  User.sql
backend/src/: main.rs
backend/src/auth/: auth.rs  mod.rs  user.rs
backend/src/controllers/: currency.rs  groups.rs  invite.rs  mod.rs  settle.rs  transactions.rs  users.rs
backend/src/db/: currency_pairs.rs  groups.rs  invite.rs  memberships.rs  mod.rs  split.rs  splits.rs  transactions.rs  users.rs
backend/src/models/: currency_pair.rs  group.rs  invite.rs  membership.rs  mod.rs  split.rs  transaction.rs  user.rs
backend/src/utils/: currency.rs  mod.rs  responders.rs  transaction_helpers.rs
contract/: README.md
contract/src/: MultiSend.sol
contract/src/test/: Contract.t.sol
frontend/: .env.development  .env.production  .gitignore  .prettierrc.json  package.json  tailwind.config.js
frontend/components/: Button.tsx  Input.tsx  Input2.tsx
frontend/components/App/: NewCard.tsx  NewGroupModal.tsx  NewSplit.tsx  Sidebar.tsx  SplitCard.tsx
frontend/components/DetailView/: Expense.tsx  ExpensesList.tsx  GroupStats.tsx  NewTransactionModal.tsx
frontend/components/UI/: AppButton.tsx  Button.tsx  CurrencySelector.tsx  DatePicker.tsx  Input.tsx  Modal.tsx  SplitParticipants.tsx  ToggleButton.tsx
frontend/components/app/: NewCard.tsx  NewGroupModal.tsx  Sidebar.tsx  SplitCard.tsx
frontend/pages/: _app.tsx  _document.tsx  dashboard.tsx  index.tsx  newGroup.tsx  openGroups.tsx  pastGroups.tsx
frontend/styles/: globals.css
frontend/utils/: address.ts  avatar.ts  constants.ts  responses.ts
(+26 files in other folders)
