[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "backend"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["json"] }
sqlx = { version = "0.5", features = [ "runtime-tokio-native-tls" , "mysql" ] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
ethers = "0.6.2"