[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "backend"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["json"] }
sqlx = { version = "0.5", features = [ "runtime-tokio-native-tls" , "mysql", "offline", "chrono", "decimal" ] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
ethers = "0.6.2"
chrono = { version = "0.4.0", features = ["serde"] }
uuid = { version = "0.8", features = ["v4"] }
log = "0.4.14"
rust_decimal = { version = "1.6.0" }
reqwest = "0.11.8"
